einstellung_derive/src/trybuild_tests/default_on_optional_field.stderr
error: #[config[default(..)] is meaningless on an `Option` type
 --> src/trybuild_tests/default_on_optional_field.rs
  |
  |     #[config(default)]
  |              ^^^^^^^
